--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
       <div class="card">
         <img
           class="Character"
-          src="https://upload.wikimedia.org/wikipedia/commons/3/34/Elon_Musk_Royal_Society_%28crop2%29.jpg"
-          alt="ElonMusk"
+          src="https://telekom-digitalx-content-develop.s3.eu-central-1.amazonaws.com/speaker_arnold_schwarzenegger_detail_f39a397d7e.jpg"
+          alt="Arnold"
         />
-        <h2>Elon Musk</h2>
-        <p class="position">Founder & CEO</p>
+        <h2>Arnold</h2>
+        <p class="position">Actor</p>
         <p class="description">
-          Elon Musk cofounded six companies, including electric car maker Tesla,
-          rocket producer SpaceX and tunneling startup Boring Company
+          Arnold Alois Schwarzenegger is an Austrian and American actor,
+          businessman, filmmaker, politician, and retired professional
+          bodybuilder best known for his roles in high-profile action movies
         </p>
         <div class="social-media">
           <img
@@ -41,15 +42,16 @@
       <div class="card">
         <img
           class="Character"
-          src="https://media.vanityfair.com/photos/5cf71b7e5d0130aa612df063/master/w_2560%2Cc_limit/zuckerberg1.jpg"
-          alt="Mark zuckerberg"
+          src="https://www.onthisday.com/images/people/robert-downey-jr.jpg?w=360"
+          alt="robert-downey-jr"
         />
-        <h2>Mark zuckerberg</h2>
-        <p class="position">Founder & CEO</p>
+        <h2>Robert Downey Jr</h2>
+        <p class="position">Actor</p>
         <p class="description">
-          Mark Elliot Zuckerberg also known colloquially as Zuck, is an American
-          business magnate, computer programmer, internet entrepreneur and
-          philanthropist.
+          Robert John Downey Jr. is an American actor. His career has been
+          characterized by critical and popular success in his youth, followed
+          by a period of substance abuse and legal troubles, before a resurgence
+          of commercial success later in his career
         </p>
         <div class="social-media">
           <img
@@ -72,15 +74,16 @@
       <div class="card">
         <img
           class="Character"
-          src="https://images.assettype.com/fortuneindia%2F2021-06%2F2a6d3cc9-bbb4-42f7-a0de-670a0c8da9d0%2FMukesh_Ambani_02.jpg?w=1250&q=60"
-          alt="Mukesh Ambani"
+          src="https://phantom-marca.unidadeditorial.es/023de5244b791c5aa890a89e8a67ebbe/resize/828/f/jpg/assets/multimedia/imagenes/2023/05/19/16844885388361.jpg"
+          alt="vin-diesel"
         />
-        <h2>Mukesh Ambani</h2>
-        <p class="position">Founder & CEO</p>
+        <h2>Vin diesel</h2>
+        <p class="position">Actor</p>
         <p class="description">
-          Mukesh Dhirubhai Ambani is an Indian billionaire businessman. He is
-          currently the chairman and managing director of Reliance Industries,
-          India's most valuable company by market value
+          Mark Sinclair, known professionally as Vin Diesel, is an American
+          actor and film producer. One of the world's highest-grossing actors,
+          he is best known for playing Dominic Toretto in the Fast & Furious
+          franchise.
         </p>
         <div class="social-media">
           <img
